package app;

public class CurrentTrainingPage {
    private Exercises ex;
    private HomePage hp;
    private WorkoutPage wp;

    public CurrentTrainingPage() {}


    public void startTraining() {}
    public void endTraining() {}
    public int editReps() {return 0;}
    public float editKg() { return 0.0f; }
    public String editNote() {
        return "";
    }
    public void setEx(Exercises ex) {
        this.ex = ex;
    }
    public Exercises getEx() {
        return ex;
    }
}